; ModuleID = '/home/carl/AnghaBench/openssl/apps/extr_ts.c_txt2obj.c'
source_filename = "/home/carl/AnghaBench/openssl/apps/extr_ts.c_txt2obj.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@bio_err = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [26 x i8] c"cannot convert %s to OID\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*)* @txt2obj to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @txt2obj(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  store i32* null, i32** %3, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = call i32* @OBJ_txt2obj(i8* %4, i32 0)
  store i32* %5, i32** %3, align 8
  %6 = icmp eq i32* %5, null
  br i1 %6, label %7, label %11

7:                                                ; preds = %1
  %8 = load i32, i32* @bio_err, align 4
  %9 = load i8*, i8** %2, align 8
  %10 = call i32 @BIO_printf(i32 %8, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i8* %9)
  br label %11

11:                                               ; preds = %7, %1
  %12 = load i32*, i32** %3, align 8
  ret i32* %12
}

declare dso_local i32* @OBJ_txt2obj(i8*, i32) #1

declare dso_local i32 @BIO_printf(i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
